[build-system]
requires = [
    "packaging>=24",
    "scikit-build-core>=0.10",
    "pybind11>=2.13.6",
]
build-backend = "scikit_build_core.build"

[project]
name = "onionlink"
version = "0.1.0"
description = "Linux-only Python bindings for the onionlink Tor v3 onion-service client"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "onionlink contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
]

[tool.scikit-build]
wheel.packages = ["src/onionlink"]
cmake.args = [
    "-DONIONLINK_BUILD_CLI=OFF",
    "-DONIONLINK_BUILD_PYTHON=ON",
]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"
